git commit add brackets
- ()
- ``
- ""
- ''
- {}
- []

--- a/languages/gitcommit/config.toml
+++ b/languages/gitcommit/config.toml
@@ -9,4 +9,11 @@ path_suffixes = [
   "EDIT_DESCRIPTION",
 ]
 line_comments = ["#"]
-brackets = []
+brackets = [
+  { start = "(", end = ")", close = true, newline = false },
+  { start = "`", end = "`", close = true, newline = false },
+  { start = "\"", end = "\"", close = true, newline = false },
+  { start = "'", end = "'", close = true, newline = false },
+  { start = "{", end = "}", close = true, newline = false },
+  { start = "[", end = "]", close = true, newline = false },
+]
