--- a/languages/gitignore/config.toml
+++ b/languages/gitignore/config.toml
@@ -7,6 +7,9 @@ path_suffixes = [
 
   # other? https://github.com/zed-industries/extensions/pull/649
   ".dockerignore",
+  
+  ".eslintignore",
+  ".prettierignore"
 ]
 line_comments = ["#"]
 autoclose_before = "]"
