--- a/languages/gitignore/config.toml
+++ b/languages/gitignore/config.toml
@@ -8,6 +8,7 @@ path_suffixes = [
   # other? https://github.com/zed-industries/extensions/pull/649
   ".dockerignore",
   
+  ".vscodeignore",
   ".eslintignore",
   ".prettierignore"
 ]
