Add path suffixes (#6)
* Add path suffixes

* Add path suffixes `vscodeignore`

* Change version

--- a/languages/gitignore/config.toml
+++ b/languages/gitignore/config.toml
@@ -7,6 +7,10 @@ path_suffixes = [
 
   # other? https://github.com/zed-industries/extensions/pull/649
   ".dockerignore",
+  
+  ".vscodeignore",
+  ".eslintignore",
+  ".prettierignore"
 ]
 line_comments = ["#"]
 autoclose_before = "]"
